--- a/app/styles/components/_sideNav.scss
+++ b/app/styles/components/_sideNav.scss
@@ -5,9 +5,9 @@
   top: 0;
   margin: 0;
   height: 100%;
-  height: calc(100% + 60px);
-  height: -webkit-calc(100% + 60px);
-  height: -moz-calc(100%); //Temporary Firefox Fix
+  // height: calc(100% + 60px);
+  // height: -webkit-calc(100% + 60px);
+  // height: -moz-calc(100%); //Temporary Firefox Fix
   padding-bottom: 60px;
   background-color: #FFF;
   z-index: 999;
