--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -278,13 +278,14 @@ div.legal a {
   -moz-box-sizing: border-box;
 }
 #title {
-  padding: 21px;
-  position: absolute; 
+  padding: 15px;
+  position: absolute;
   bottom: 0;
   color: #383838;
   line-height: 35px;
   font-weight: 300;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto',sans-serif;
+  font-size: 25px;
 }
 footer {
   position: fixed;
