typography fixes and logo covering the menu icon on certain devices

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -278,7 +278,7 @@ div.legal a {
   -moz-box-sizing: border-box;
 }
 #title {
-  padding: 15px;
+  padding: 15px 15px 13px 50px;
   position: absolute;
   bottom: 0;
   color: #383838;
