--- a/app/styles/components/_typography.scss
+++ b/app/styles/components/_typography.scss
@@ -13,7 +13,7 @@ a {
 html{
   line-height: 1.5;
   
-  @media only screen and (max-width: 0) {
+  @media only screen and (max-width: $small-screen) {
     font-size: 14px;
     h1 {
       font-size: 2.56rem;
@@ -26,12 +26,12 @@ html{
   @media only screen and (max-width: $medium-screen) {
     font-size: 14.5px;
     h4 {
-      font-size: 1.4rem;
+      font-size: 1.5rem;
     }
   }
   @media only screen and (min-width: $medium-screen) {
     h4 {
-      font-size: 1.5rem;
+      font-size: 1.7rem;
     }
   }
   @media only screen and (max-width: $large-screen) {
