fixes to hover text

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -1363,11 +1363,11 @@ span.unu, span.doi, span.trei {
 .align-with-title {
   margin-top: -8px;
 }
-.anchor-blue, .anchor-orange {
+.anchor-blue, .anchor-orange, .anchor-grey {
   text-decoration: none;
   background-repeat: repeat-x;
   background-size: 2px 2px;
-  background-position: 0 16px;
+  background-position: 0 21px;
 }
 .anchor-blue {
   background-image: linear-gradient(to bottom,transparent 50%, #099DB0 50%);
