--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -284,7 +284,7 @@ div.legal a {
   color: #383838;
   line-height: 35px;
   font-weight: 300;
-  font-family: 'Roboto',sans-serif;
+  font-family: 'myriad-pro',sans-serif;
   font-size: 25px;
 }
 footer {
@@ -849,7 +849,7 @@ h5.Business {
   margin-right: 5px;
   border: 2px solid #fff;
   border-radius: 100px;
-  font-size: 13px;
+  font-size: 12px;
   line-height: 0 !important;
   filter: alpha(opacity=50);
   -moz-opacity: 0.8;
