add h2 subtitle to html for better seo

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -1417,3 +1417,8 @@ span.unu, span.doi, span.trei {
 #mobile-hamburger:hover {
   box-shadow: none;
 }
+#subtitle {
+  font-size: 1.2rem;
+  line-height: 1.32rem;
+  margin: .6rem 0 .48rem;
+}
