encrypt email, remove inline styles, and fout issues

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -674,6 +674,13 @@ span.badge.category {
   .about-bg {
     margin-top:-100px;
   }
+  #title {
+    font-size: 45px; 
+    padding: 0px 0px 24px 35px;
+  }
+  #banner {
+    height: 130px;
+  }
 }
 @media only screen and (min-width: 993px) {
   #disqus_thread {
