html validation error fixes

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -1481,3 +1481,8 @@ a  {
   opacity: 1;
   transition: opacity 1s linear;
 }
+.main-icon {
+  font-size: 2.2rem;
+  line-height: 2.42rem;
+  margin: 1.1rem 0 .88rem;
+}
