ie background images not showing

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -1423,7 +1423,6 @@ span.unu, span.doi, span.trei {
   margin: .6rem 0 .48rem;
 }
 
-
 #banner {
   visibility: hidden;
   opacity: 0;
@@ -1482,7 +1481,7 @@ a  {
   transition: opacity 1s linear;
 }
 .main-icon {
-  `sfont-size: 2.2rem;
+  font-size: 2.2rem;
   line-height: 2.42rem;
   margin: 1.1rem 0 .88rem;
 }
