--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -902,24 +902,6 @@ a[disabled] {
 article .blog-item {
   border-radius: 2px;
 }
-article.first .blog-item:hover {
-  background: #ffffff;
-}
-article.second .blog-item:hover {
-  background: #ffffff;
-}
-article.third .blog-item:hover {
-  background: #ffffff;
-}
-article.fourth .blog-item:hover {
-  background: #ffffff;
-}
-article.fifth .blog-item:hover {
-  background: #ffffff;
-}
-article.sixth .blog-item:hover {
-  background: #ffffff;
-}
 .row.no-padding {
   margin-bottom: 0;
 }
@@ -943,6 +925,7 @@ body {
 }
 .blog-item:hover {
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.02),0 2px 10px 0 rgba(0, 0, 0, 0.08);
+  background: #ffffff;
 }
 /* .current_page_item {
   font-weight: 600;
@@ -1334,22 +1317,9 @@ span.unu, span.doi, span.trei {
 .align-with-title {
   margin-top: -8px;
 }
-.anchor-blue, .anchor-orange, .anchor-grey {
-  text-decoration: none;
-  background-repeat: repeat-x;
-  background-size: 2px 2px;
-  background-position: 0 21px;
+a.anchor {
+  text-decoration: underline;
 }
-.anchor-blue {
-  background-image: linear-gradient(to bottom,transparent 50%, #099DB0 50%);
-}
-.anchor-orange {
-  background-image: linear-gradient(to bottom,transparent 50%, #ffab40 50%);
-}
-.anchor-grey {
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 50%, rgba(0,0,0,0.6) 50%);
-}
-
 .tab > a:hover:before {
   visibility: visible;
   -webkit-transform: scaleX(1);
@@ -1485,7 +1455,7 @@ a  {
 .wf-active #banner {
   visibility: visible;
   opacity: 1;
-  transition: opacity 1s linear;
+  transition: opacity .5s linear;
 }
 .wf-active #content {
   visibility: visible;
@@ -1496,4 +1466,10 @@ a  {
   font-size: 2.2rem;
   line-height: 2.42rem;
   margin: 1.1rem 0 .88rem;
+}
+.page-title {
+  font-size: 2rem;
+}
+.widgettitle, .page-title, .entry-title {
+  font-weight: 200;
 }
