comments on custom post types and hoverable class

--- a/app/styles/components/_modal.scss
+++ b/app/styles/components/_modal.scss
@@ -5,7 +5,8 @@
   position: fixed;
   left: 0;
   right: 0;
-  background-color: #fafafa;
+  // background-color: #fafafa;
+  background-color: #F2F2F2;
   padding: 0;
   max-height: 70%;
   width: 55%;
