--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -974,11 +974,9 @@ article .blog-item {
   margin-bottom: 10px;
 }
 body {
-  background-color: #F9F9F9;
-}
-.blog-item:hover {
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.02),0 2px 10px 0 rgba(0, 0, 0, 0.08);
-  background: #ffffff;
+  background-color: #FFFFFF;
+  //background-color: #F9F9F9;
+  //background-color: #F2F2F2;
 }
 /* .current_page_item {
   font-weight: 600;
@@ -1068,6 +1066,7 @@ nav {
 .footer-title {
   font-size: 1.2rem;
   padding-bottom: 25px;
+  font-weight: 400;
 }
 .heading-lr-pad {
   padding: 0px 20px;  
@@ -1538,13 +1537,18 @@ a  {
 .portfolio-blog-item {
   background-color: #fff;
   border-radius: 3px;
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,.02),0 2px 10px 0 rgba(0,0,0,.08);
 }
 .blog-item {
   background-color: #fff;
   border-radius: 3px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.02),0 2px 10px 0 rgba(0, 0, 0, 0.08);
+}
+.blog-item:hover { 
+  background: #ffffff;
 }
 .portfolio-blog-item:hover {
-  box-shadow: 0 2px 5px 0 rgba(0,0,0,.02),0 2px 10px 0 rgba(0,0,0,.08);
+  // box-shadow: 0 2px 5px 0 rgba(0,0,0,.02),0 2px 10px 0 rgba(0,0,0,.08);
 }
 .portfolio-article-link {
   cursor: pointer;
@@ -1572,4 +1576,8 @@ a  {
 .not-active {
    pointer-events: none;
    cursor: default;
+}
+.hoverable:hover {
+  transition: box-shadow .25s;
+  box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.05),0 6px 20px 0 rgba(0, 0, 0, 0.15);
 }
