fout issues and hover box shadow improvements

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -255,7 +255,7 @@ div.legal a {
   color: #383838;
   line-height: 35px;
   font-weight: 300;
-  font-family: 'myriad-pro',sans-serif;
+  font-family: 'myriad-pro', sans-serif;
   font-size: 25px;
 }
 footer {
@@ -1444,76 +1444,26 @@ a.anchor {
   line-height: 1.7rem;
   margin: .6rem 0 .48rem;
 }
-#content {
+
+.wf-loading #home-logo, 
+.wf-loading a,
+.wf-loading h1, 
+.wf-loading h2,
+.wf-loading p,
+.wf-loading #toolbar {
   visibility: hidden;
-  opacity: 0;
 }
-#banner {
-  visibility: hidden;
-  opacity: 0;
-}
-#home-logo {
-  visibility: hidden;
-  opacity: 0;
-}
-#menu-main-navigation li a {
-  visibility: hidden;
-  opacity: 0;
-}
-a  {
-  visibility: hidden;
-  opacity: 0;
-}
-.location {
-  visibility: hidden;
-  opacity: 0;
-}
-.wf-loading #home-logo {
-  visibility: hidden;
-  opacity: 0;
-}
-.wf-loading #menu-main-navigation li a {
-  visibility: hidden;
-  opacity: 0;
-}
-.wf-loading a  {
-  visibility: hidden;
-  opacity: 0;
-}
-.wf-loading #content {
-  visibility: hidden;
-  opacity: 0;
-}
-.wf-active #home-logo {
+.wf-active #home-logo, 
+.wf-active a 
+.wf-active h1, 
+.wf-active h2,
+.wf-active p,
+.wf-active #toolbar {
   visibility: visible;
-  opacity: 1;
-  transition: opacity 1s linear;
 }
-.wf-active #menu-main-navigation li a {
-  visibility: visible;
-  opacity: 1;
-  transition: opacity 1s linear;
-}
-.wf-active a {
-  visibility: visible;
-  opacity: 1;
-  // transition: opacity 1s linear;
-}
-.wf-active .location {
-  visibility: visible;
-  opacity: 1;
-  transition: opacity 1s linear;
-}
-.wf-active #banner {
-  visibility: visible;
-  opacity: 1;
-  //transition: opacity .5s linear;
-}
-.wf-active #content {
-  visibility: visible;
-  opacity: 1;
-  transition: opacity 1s linear;
-}
+
+
+
 .main-icon {
   font-size: 2.2rem;
   line-height: 2.42rem;
