ajax searchform on 404 error page

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -899,8 +899,9 @@ h5.Business {
 }
 aside.aside-left {
   float: left;
-  margin-left: -155px;
+  margin-left: -175px;
   text-align: left;
+  font-size: 14px;
 }
 aside:before {
   content: "________";
