--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -775,7 +775,7 @@ span.badge.UX {
   float:left;
   margin-top: 10px;
 }
-h5.UX {
+h5.UX, h3.UX {
   color: #3C72C5;
 }
 span.badge.Code {
@@ -811,7 +811,7 @@ span.badge.Development {
   float:left;
   margin-top: 10px;
 }
-h5.Development {
+h5.Development, h3.Development {
   color: #3C72C5;
 }
 span.badge.Uncategorized {
@@ -835,7 +835,7 @@ span.badge.Design {
   float:left;
   margin-top: 10px;
 }
-h5.Design {
+h5.Design, h3.Design {
   color: #EA5B42;
 }
 span.badge.Technology {
