--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -261,6 +261,8 @@ div.legal a {
 .bg-img-half {
   width: 100%;
   min-height: 356px;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
   top: 0;
   left: 0;
   z-index: 1;
