accessibility fixes for keyboard navigation

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -1278,7 +1278,7 @@ a.anchor {
   height: 2px;
   bottom: 0;
   left: 0;
-  background-color: #757575;
+  background-color: #099DB0;
   visibility: hidden;
   -webkit-transform: scaleX(0);
   transform: scaleX(0);
